--- a/PID_ITS2/configs/cfgPID_visual.yml
+++ b/PID_ITS2/configs/cfgPID_visual.yml
@@ -31,7 +31,7 @@ TH1:
                         xmin:   0,
                         xmax:   25},
               meanClSize: {title:  "<Cl. Size>; <cl. size>; counts",
-                        nBins:  100,
+                        nBins:  50,
                         xmin:   0,
                         xmax:   25},
               clSizeCosL: {title:  "<Cl. Size> <cos#lambda>; <cl. size> <cos#lambda>; counts",
@@ -39,13 +39,13 @@ TH1:
                         xmin:   0,
                         xmax:   25},
               p:       {title: "p; p (GeV/c); counts",
-                        nBins:  1500,
+                        nBins:  1000,
                         xmin:   0,
-                        xmax:   1.5},
+                        xmax:   1.},
               pt:      {title: "p_{T}; p_{T} (GeV/c); counts",
-                        nBins:  1500,
+                        nBins:  1000,
                         xmin:   0,
-                        xmax:   1.5},
+                        xmax:   1.},
               phi:     {title:  "#phi; #phi; counts",
                         nBins:  100,
                         xmin:   0,
@@ -87,29 +87,74 @@ TH1:
 TH2:      
   settings: { dEdx_vs_p:  {title:  "dE/dx vs p; p (GeV/c); dE/dx (); counts",
                         x:      "p",
-                        nBinsX: 1500,
+                        nBinsX: 1000,
                         xmin:   0,
-                        xmax:   1.5,
+                        xmax:   1.,
                         y:      "dEdx",
                         nBinsY: 600,
                         ymin:   0,
                         ymax:   600},
-              clSizeCosL_vs_p: {title:  "<Cl. Size> <cos#lambda> vs p; p (GeV/c); <cl. size> <cos#lambda> (); counts",
+              meanClize_vs_p: {title:  "<Cl. Size> vs p; p (GeV/c); <cl. size>; counts",
                         x:      "p",
-                        nBinsX:  1500,
+                        nBinsX: 1000,
                         xmin:   0,
-                        xmax:   1.5,
+                        xmax:   1.,
+                        y:      "meanClSize",
+                        nBinsY: 50,
+                        ymin:   0,
+                        ymax:   25},
+              clSizeCosL_vs_p: {title:  "<Cl. Size> <cos#lambda> vs p; p (GeV/c); <cl. size> <cos#lambda>; counts",
+                        x:      "p",
+                        nBinsX: 1000,
+                        xmin:   0,
+                        xmax:   1.,
                         y:      "clSizeCosL",
                         nBinsY: 250,
                         ymin:   0,
                         ymax:   25},
-              beta_vs_p: {title:  "#beta vs p; p (GeV/c); #beta (); counts",
+              beta_vs_p: {title:  "#beta vs p; p (GeV/c); #beta; counts",
                         x:     "p",
-                        nBinsX:  1500,
+                        nBinsX: 1000,
                         xmin:   0,
-                        xmax:   1.5,
+                        xmax:   1.,
+                        y:      "beta",
+                        nBinsY: 100,
+                        ymin:   0,
+                        ymax:   1},
+              dEdx_vs_pTPC:  {title:  "dE/dx vs p_{TPC}; p_{TPC} (GeV/c); dE/dx (); counts",
+                        x:      "pTPC",
+                        nBinsX: 1000,
+                        xmin:   0,
+                        xmax:   1.,
+                        y:      "dEdx",
+                        nBinsY: 600,
+                        ymin:   0,
+                        ymax:   600},
+              clSizeCosL_vs_pTPC: {title:  "<Cl. Size> <cos#lambda> vs p_{TPC}; p_{TPC} (GeV/c); <cl. size> <cos#lambda>; counts",
+                        x:      "pTPC",
+                        nBinsX: 1000,
+                        xmin:   0,
+                        xmax:   1.,
+                        y:      "clSizeCosL",
+                        nBinsY: 250,
+                        ymin:   0,
+                        ymax:   25},
+              beta_vs_pTPC: {title:  "#beta vs p_{TPC}; p_{TPC} (GeV/c); #beta; counts",
+                        x:     "pTPC",
+                        nBinsX: 1000,
+                        xmin:   0,
+                        xmax:   1.,
                         y:      "beta",
                         nBinsY:  100,
                         ymin:   0,
                         ymax:   1},
+              deltaP_vs_pTPC: {title:  "#Delta p vs p_{TPC}; p_{TPC} (GeV/c); #Delta p; counts",
+                        x:     "pTPC",
+                        nBinsX: 1000,
+                        xmin:   0,
+                        xmax:   1.,
+                        y:      "deltaP",
+                        nBinsY:  100,
+                        ymin:   -0.5,
+                        ymax:   0.5},
             }
